Single event view html and css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8">
     <title>RSS feed styling</title>
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <script src='javascript/jquery-1.11.2.min.js'></script>
   </head>
   <body>
+    <div id='container'>
+      <h1>FIXED TITLE</h1>
+      <div class='details'>
+        <span class='location'>ROOM 53 - 2nd floor</span>
+        <label class='name'>NAME OF EVENT</label>
+        <p class='time'>08:00 - 17:00</p>
+      </div>
+     </div>
 
     <script>
       $(function() {
