Google fonts and 'em' instead of 'px'

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>RSS feed styling</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,700,300' rel='stylesheet'>
     <script src='javascript/jquery-1.11.2.min.js'></script>
   </head>
   <body>
