Creating event list page 1) Adding two styles for portrait mode for single event view and list view 2) Replacing double quotes

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
+    <meta name='description' content='RSS single event'>
     <title>RSS feed styling</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel='stylesheet' href='css/reset.css' />
+    <link rel='stylesheet' href='css/index.css' />
+    <link rel='stylesheet' href='css/portrait_index.css' media='all and (max-width: 1080px)'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,700,300' rel='stylesheet'>
     <script src='javascript/jquery-1.11.2.min.js'></script>
   </head>
   <body>
-    <div id='container'>
+    <div id='wrapper'>
       <h1>FIXED TITLE</h1>
-      <div class='details'>
+      <div class='container'>
         <span class='location'>ROOM 53 - 2nd floor</span>
         <label class='name'>NAME OF EVENT</label>
         <p class='time'>08:00 - 17:00</p>
