--- a/list.html
+++ b/list.html
@@ -16,7 +16,7 @@
       <div class='container'>
         <div class='item'>
           <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
+          <label class='name'>FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN</label>
           <p class='time'>08:00 - 17:00</p>
         </div>
         <div class='item'>
@@ -36,7 +36,7 @@
         </div>
         <div class='item'>
           <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
+          <label class='name'>FÖRETAGETS NAMN cswew ew  wefew fewf efef</label>
           <p class='time'>08:00 - 17:00</p>
         </div>
         <div class='item'>
@@ -51,7 +51,7 @@
         </div>
         <div class='item'>
           <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
+          <label class='name'>FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN</label>
           <p class='time'>08:00 - 17:00</p>
         </div>
         <div class='item'>
