--- a/list.html
+++ b/list.html
@@ -9,6 +9,7 @@
     <link rel='stylesheet' href='css/portrait_list.css' media='all and (max-width: 1080px)'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,700,300' rel='stylesheet'>
     <script src='javascript/jquery-1.11.2.min.js'></script>
+    <script src='javascript/jquery.xml2json.js'></script>
     <script src='javascript/app.js'></script>
   </head>
   <body>
