Add init options for the app and template item.

--- a/list.html
+++ b/list.html
@@ -17,6 +17,11 @@
       <h1>FIXED TITLE</h1>
       <div class='container'>
         <div class='item'>
+          <span class='location'></span>
+          <label class='name'></label>
+          <p class='time'></p>
+        </div>
+        <div class='item'>
           <span class='location'>LILLA SALEN - VÅNING 2</span>
           <label class='name'>FÖRETAGETS NAMN</label>
           <p class='time'>08:00 - 17:00</p>
@@ -96,7 +101,7 @@
 
     <script>
       $(function() {
-        App.init('grupp00.xml');
+        App.init();
       });
     </script>
   </body>
