--- a/list.html
+++ b/list.html
@@ -10,17 +10,13 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,700,300' rel='stylesheet'>
     <script src='javascript/jquery-1.11.2.min.js'></script>
     <script src='javascript/jquery.xml2json.js'></script>
+    <script src='javascript/feed.js'></script>
     <script src='javascript/app.js'></script>
   </head>
   <body>
     <div id='wrapper'>
       <h1>FIXED TITLE</h1>
       <div class='container'>
-        <div class='item'>
-          <span class='location'></span>
-          <label class='name'></label>
-          <p class='time'></p>
-        </div>
         <div class='item'>
           <span class='location'>LILLA SALEN - VÅNING 2</span>
           <label class='name'>FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN</label>
@@ -98,10 +94,16 @@
         </div>
       </div>
      </div>
-
+     <div class='template'>
+      <div class='item'>
+        <span data-rss-tag='Row1' class='location'></span>
+        <label data-rss-tag='Row2' class='name'></label>
+        <p data-rss-tag='Row3' class='time'></p>
+      </div>
+    </div>
     <script>
       $(function() {
-        App.init();
+        App.init(Feed);
       });
     </script>
   </body>
