Feed filtering 1) Remove staticevent items on the page and use the feed instead. 2) Update XML file to show event time as 3rd row. 3) Put more work to Feed class insted of App. 4) Filter events if they are not passed.

--- a/list.html
+++ b/list.html
@@ -17,83 +17,7 @@
   <body>
     <div id='wrapper'>
       <h1>FIXED TITLE</h1>
-      <div id='container'>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN cswew ew  wefew fewf efef</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-        <div class='item'>
-          <span class='location'>LILLA SALEN - VÅNING 2</span>
-          <label class='name'>FÖRETAGETS NAMN</label>
-          <p class='time'>08:00 - 17:00</p>
-        </div>
-      </div>
+      <div id='container'></div>
      </div>
      <div class='template'>
       <div class='item mix' data-myorder='1'>
@@ -110,7 +34,7 @@
               enable: false
             }
           });
-          $('#container').mixItUp('sort', 'myorder:asc');
+          // $('#container').mixItUp('sort', 'myorder:asc');
         });
       });
     </script>
