Check if newly requested feed is matching current one and display its event items if they do not match.

--- a/list.html
+++ b/list.html
@@ -20,7 +20,7 @@
       <div id='container'></div>
      </div>
      <div class='template'>
-      <div class='item mix' data-myorder='1'>
+      <div class='item mix' data-myorder='1' data-TimeStart='' data-TimeEnd=''>
         <span data-rss-tag='Row1' class='location'></span>
         <label data-rss-tag='Row2' class='name'></label>
         <p data-rss-tag='Row3' class='time'></p>
