Shuffling event items.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               enable: false
             }
           });
-          // $('#container').mixItUp('sort', 'myorder:asc');
+          $('#container').mixItUp('sort', 'myorder:asc');
         });
       });
     </script>
