Add check for empty feed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='css/reset.css' />
     <link rel='stylesheet' href='css/index.css' />
     <link rel='stylesheet' href='css/portrait.css' media='all and (max-width: 1080px)'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,700,300' rel='stylesheet'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,700,300' rel='stylesheet'>
     <script src='javascript/jquery-1.11.2.min.js'></script>
     <script src='javascript/jquery.xml2json.js'></script>
     <script src='javascript/jquery.mixitup.js'></script>
