Implement special list layout and ordered events

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <script>
       $(function() {
         App.init(Feed, function(isSingleEvent) {
-          if (!isSingleEvent) {
-            $('#container').mixItUp({ controls: { enable: false } });
-            $('#container').mixItUp('sort', 'myorder:asc');
-          }
+          // if (!isSingleEvent) {
+          //   $('#container').mixItUp({ controls: { enable: false } });
+          //   $('#container').mixItUp('sort', 'myorder:asc');
+          // }
         });
       });
     </script>
